# AI-Customer-Support-Bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
app/: database.py  models.py
app/routes/: chat.py  session.py
app/services/: escalation.py  faq_service.py  llm_service.py
data/: faqs.json  sample_queries.txt
frontend/: app.js  index.html  styles.css
